@@ -4,34 +4,45 @@ import com.erzbir.albaz.dispatch.CancelableEvent;
 import com.erzbir.albaz.dispatch.Event;
 import com.erzbir.albaz.dispatch.EventChannel;
 import com.erzbir.albaz.dispatch.EventDispatcher;
-import lombok.extern.slf4j.Slf4j;
+import com.erzbir.albaz.logging.Log;
+import com.erzbir.albaz.logging.LogFactory;
 
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.PriorityBlockingQueue;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
- * 基于轮询的 {@link EventDispatcher}, 需要调用
+ * <p>
+ * 基于轮询的 {@link EventDispatcher}, 会启动一个虚拟线程轮询拉取事件, 可以通过 {@link #join()} 方法阻塞 (不会阻塞调用线程).
+ * </p>
  *
  * @author Erzbir
+ * @see EventDispatcher
+ * @see AbstractEventDispatcher
  * @since 1.0.0
  */
-@Slf4j
-public class PollingEventDispatcher extends AbstractEventDispatcher implements EventDispatcher {
+public final class PollingEventDispatcher extends AbstractEventDispatcher implements EventDispatcher {
+    private final Log log = LogFactory.getLog(PollingEventDispatcher.class);
+    private final int batchSize = 5;
     // 同步块的锁, 用于控制线程
     private final Object dispatchLock = new Object();
+    private Thread dispatcherThread;
+    /**
+     * 守卫线程, 用于调用 {@link #join()} 后分发线程进入等待, 并且保证主线程不退出, 在调用 {@link #cancel()} 后退出
+     */
+    private Thread guardThread;
     // 事件缓存队列
     private final PriorityBlockingQueue<Event> eventQueue = new PriorityBlockingQueue<>(10, Comparator.comparingInt(Event::getPriority));
-    // 当前是否暂停
-    private volatile boolean suspended = false;
-    private final List<Thread> threads = new ArrayList<>();
+    // 暂停线程标志位
+    private final AtomicBoolean suspended = new AtomicBoolean(false);
 
     @Override
     protected <E extends Event> void dispatchTo(E event, EventChannel<E> channel) {
         eventQueue.add(event);
         // 如果有事件要分发, 则恢复线程
-        if (suspended) {
+        if (suspended.get()) {
             resume();
         }
     }
@@ -43,40 +54,46 @@ public class PollingEventDispatcher extends AbstractEventDispatcher implements E
         }
         Runnable runnable = () -> {
             while (activated.get() && !Thread.currentThread().isInterrupted()) {
-                // 如果队列为空则暂让线程等待
                 try {
+                    // 如果队列为空则暂让线程等待
                     if (eventQueue.isEmpty()) {
-                        suspend();
+                        if (!suspended.get()) {
+                            suspend();
+                        }
                         continue;
                     }
-                    Event event = eventQueue.take();
+                    List<Event> events = new ArrayList<>(batchSize);
+                    eventQueue.drainTo(events, batchSize);
                     EventChannelDispatcher<Event> channel = EventChannelDispatcher.INSTANCE;
-                    Thread.ofVirtual()
-                            .name("Dispatcher-Sub-Thread")
-                            .start(createTask(channel, event));
+                    for (Event event : events) {
+                        Thread.ofVirtual()
+                                .name("Dispatcher-Sub-Thread")
+                                .start(createTask(channel, event));
+                    }
                 } catch (InterruptedException e) {
-                    log.error("Dispatching error: {}", e.getMessage());
-                    cancel();
-                    Thread.currentThread().interrupt();
+                    log.error("Dispatching error: " + e.getMessage());
                 }
             }
         };
-        // 主线程结束后程序不结束, 调用 cancel() 后结束
-        Thread thread = new Thread(runnable, "Dispatcher-Thread");
-        threads.add(thread);
-        thread.start();
+        dispatcherThread = Thread.ofVirtual().name("Dispatcher-Thread").start(runnable);
     }
 
+    /**
+     * 恢复轮询
+     */
     private void resume() {
         synchronized (dispatchLock) {
-            suspended = false;
+            suspended.set(false);
             dispatchLock.notifyAll();
         }
     }
 
+    /**
+     * 暂停轮询
+     */
     private void suspend() throws InterruptedException {
         synchronized (dispatchLock) {
-            suspended = true;
+            suspended.set(true);
             dispatchLock.wait();
         }
     }
@@ -90,27 +107,29 @@ public class PollingEventDispatcher extends AbstractEventDispatcher implements E
                     }
                 }
                 if (!event.isIntercepted()) {
-                    log.debug("Dispatching event: {} to channel: {}", event, channel.getClass().getSimpleName());
-                    channel.broadcast(new DefaultEventContext(event));
+                    log.debug("Dispatching event: " + event + " to channel: " + channel.getClass().getSimpleName());
+                    channel.broadcast(event);
                 }
             } catch (Throwable e) {
-                log.error("Dispatching to channel: {} error: {}", channel.getClass().getSimpleName(), e.getMessage());
-                Thread.currentThread().interrupt();
+                log.error("Dispatching to channel: " + channel.getClass().getSimpleName() + " error: " + e.getMessage());
             }
         };
     }
 
+    /**
+     * 用于让主线程不退出
+     */
     @Override
     public void join() {
-        threads.forEach(thread -> {
+        guardThread = new Thread(() -> {
             try {
-                thread.join();
+                suspend();
             } catch (InterruptedException e) {
-                log.error("Dispatching interrupted error: {}", e.getMessage());
+                log.error("Dispatching error when join thread: " + dispatcherThread);
             }
-        });
+        }, "Dispatch-Guard-Thread");
+        guardThread.start();
     }
-
 
     @Override
     public void cancel() {
@@ -120,6 +139,9 @@ public class PollingEventDispatcher extends AbstractEventDispatcher implements E
         eventQueue.clear();
         // 这里需要唤醒等待的线程, 否则线程永远都不会结束
         resume();
-        threads.clear();
+        dispatcherThread.interrupt();
+        guardThread.interrupt();
+        dispatcherThread = null;
+        guardThread = null;
     }
 }
